force-app/main/default/objects/Error_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Detailed message about the integration operation</description>
    <inlineHelpText>Contains success or error messages from the integration operation</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>