force-app/main/default/objects/Error_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Salesforce record ID that this log entry relates to</description>
    <inlineHelpText>Enter the 15 or 18 character Salesforce ID of the related record</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>