force-app/main/default/objects/Error_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source system or integration that generated this log entry</description>
    <inlineHelpText>Enter the name of the integration or external system that created this log</inlineHelpText>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>