force-app/main/default/objects/Error_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Technical stack trace for debugging integration failures</description>
    <inlineHelpText>Contains detailed stack trace information when integration errors occur</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>