force-app/main/default/objects/Error_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the integration operation</description>
    <inlineHelpText>Indicates whether the integration succeeded or failed</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>